--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,6 +6,7 @@
   --gray-color: rgba(38, 38, 38, 0.5);
   --gray-color-1: rgba(38, 38, 38, 0.8);
   --gray-color-2: rgba(38, 38, 38, 0.15);
+  --gray-color-3: rgba(38, 38, 38, 0.3);
   --orange: #f6b83d;
   --orange-1: #f9b020;
   --light-orange: #fff4df;
